# EtherCatLinux

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
